{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 22,
  "lineage": "c0d36193-7d65-9898-ea23-4d8f24622fab",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07a6e3b1c102cdba8",
            "arn": "arn:aws:ec2:ap-southeast-1:065147804054:instance/i-0705cbe8bbb6ab849",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdb",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-031f260588914e6ea",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0705cbe8bbb6ab849",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2-aws",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05115993cadbdb1cf",
            "private_dns": "ip-172-19-194-146.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.19.194.146",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0dce3292cba33b523",
                "volume_size": 80,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e0da21c4fe17622f",
            "tags": {
              "DailyBackup": "Daily1",
              "Name": "new-mop-ec2-instance-dev-linux-server"
            },
            "tags_all": {
              "Createby": "Ms. benja kuneepong created by terraform for test ALB",
              "DailyBackup": "Daily1",
              "Environment": "dev",
              "Name": "new-mop-ec2-instance-dev-linux-server",
              "Owner": "cpall",
              "Service": "new",
              "System": "mop"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Createby": "Ms. benja kuneepong created by terraform for test ALB",
              "Environment": "dev",
              "Name": "new-mop-ec2-instance-dev-linux-server-test",
              "Owner": "cpall",
              "Service": "new",
              "System": "mop"
            },
            "vpc_security_group_ids": [
              "sg-039e5e63b3465813b",
              "sg-084cb127654f78333"
            ]
          },
          "dependencies": [
            "aws_key_pair.ec2-instance",
            "aws_security_group.ec2_linux",
            "aws_security_group.ec2_web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb_to_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:065147804054:loadbalancer/app/new-mop-dev-alb/72d27258e48ac21f",
            "arn_suffix": "app/new-mop-dev-alb/72d27258e48ac21f",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-new-mop-dev-alb-1679119843.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:065147804054:loadbalancer/app/new-mop-dev-alb/72d27258e48ac21f",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "new-mop-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0abbcb2f8c50c665b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0e0da21c4fe17622f"
              },
              {
                "subnet_id": "subnet-0e3d02bb3e100fc2a"
              }
            ],
            "subnets": [
              "subnet-0e0da21c4fe17622f",
              "subnet-0e3d02bb3e100fc2a"
            ],
            "tags": {
              "Name": "new-mop-dev-alb"
            },
            "tags_all": {
              "Createby": "Ms. benja kuneepong created by terraform for test ALB",
              "Environment": "dev",
              "Name": "new-mop-dev-alb",
              "Owner": "cpall",
              "Service": "new",
              "System": "mop"
            },
            "vpc_id": "vpc-05dd1a9fb77da4838",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_server_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:065147804054:listener/app/new-mop-dev-alb/72d27258e48ac21f/541e54c93cb2894e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:065147804054:listener/app/new-mop-dev-alb/72d27258e48ac21f/541e54c93cb2894e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:065147804054:loadbalancer/app/new-mop-dev-alb/72d27258e48ac21f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "new-mop-dev-listener"
            },
            "tags_all": {
              "Createby": "Ms. benja kuneepong created by terraform for test ALB",
              "Environment": "dev",
              "Name": "new-mop-dev-listener",
              "Owner": "cpall",
              "Project": "",
              "Service": "new",
              "System": "mop"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb_to_server",
            "aws_lb_target_group.http_server_tg",
            "aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "http_server_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:065147804054:targetgroup/new-mop-dev-tg/96c04e96afea8315",
            "arn_suffix": "targetgroup/new-mop-dev-tg/96c04e96afea8315",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:065147804054:targetgroup/new-mop-dev-tg/96c04e96afea8315",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "new-mop-dev-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "new-mop-dev-tg"
            },
            "tags_all": {
              "Createby": "Ms. benja kuneepong created by terraform for test ALB",
              "Environment": "dev",
              "Name": "new-mop-dev-tg",
              "Owner": "cpall",
              "Service": "new",
              "System": "mop"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05dd1a9fb77da4838"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "http_server_1_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:065147804054:targetgroup/new-mop-dev-tg/96c04e96afea8315-20240220070020007000000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:065147804054:targetgroup/new-mop-dev-tg/96c04e96afea8315",
            "target_id": "i-0705cbe8bbb6ab849"
          },
          "dependencies": [
            "aws_instance.ec2-instance",
            "aws_lb_target_group.http_server_tg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:065147804054:security-group/sg-0abbcb2f8c50c665b",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0abbcb2f8c50c665b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb_security_group_test",
            "name_prefix": "",
            "owner_id": "065147804054",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Createby": "Ms. benja kuneepong created by terraform for test ALB",
              "Environment": "dev",
              "Owner": "cpall",
              "Project": "",
              "Service": "new",
              "System": "mop"
            },
            "timeouts": null,
            "vpc_id": "vpc-05dd1a9fb77da4838"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:065147804054:security-group/sg-039e5e63b3465813b",
            "description": "Allow ssh traffic to EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-039e5e63b3465813b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "Allow ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow all inside subnet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "new-mop-ec2-linux-dev-securitygroup-test",
            "name_prefix": "",
            "owner_id": "065147804054",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "new-mop-ec2-linux-dev-securitygroup"
            },
            "tags_all": {
              "Createby": "Ms. benja kuneepong created by terraform for test ALB",
              "Environment": "dev",
              "Name": "new-mop-ec2-linux-dev-securitygroup",
              "Owner": "cpall",
              "Project": "",
              "Service": "new",
              "System": "mop"
            },
            "timeouts": null,
            "vpc_id": "vpc-05dd1a9fb77da4838"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:065147804054:security-group/sg-084cb127654f78333",
            "description": "Allow web traffic to EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-084cb127654f78333",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "new-mop-ec2-web-dev-securitygroup-test",
            "name_prefix": "",
            "owner_id": "065147804054",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "new-mop-ec2-web-dev-securitygroup"
            },
            "tags_all": {
              "Createby": "Ms. benja kuneepong created by terraform for test ALB",
              "Environment": "dev",
              "Name": "new-mop-ec2-web-dev-securitygroup",
              "Owner": "cpall",
              "Project": "",
              "Service": "new",
              "System": "mop"
            },
            "timeouts": null,
            "vpc_id": "vpc-05dd1a9fb77da4838"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    }
  ]
}